objects/Product_Note_Detail_Association__c.object
<CustomObject>
    <description>Conjunction object of Product and Note Detail  (plan from GSPS)</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapped_Note_Detail_Id__c</fullName>
        <label>Mapped Note Detail Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Product_Key__c</fullName>
        <description>key to find mapped production in integration code</description>
        <label>Mapped Product Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Note_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Note Detail</label>
        <referenceTo>SGR_Note_Detail__c</referenceTo>
        <relationshipLabel>Product Note Detail Associations</relationshipLabel>
        <relationshipName>Product_Note_Detail_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Note Detail Associations</relationshipLabel>
        <relationshipName>Product_Note_Detail_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Note Detail Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Plan_Note_Detail__c</columns>
        <columns>Mapped_Product_Key__c</columns>
        <columns>Mapped_Note_Detail_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Note Detail Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Note Detail Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>